--- a/week5/Week5.1.ipynb
+++ b/week5/Week5.1.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "69da2458",
+   "id": "a9a73ac3",
    "metadata": {},
    "source": [
-    "## Objective: Learn and understand Python conditional statements <br>\n",
+    "## Objective: Learn and understand Python conditional statements \n",
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week5/Week5.1.ipynb\n",
     "\n",
     "### Outline:\n",
     "\n",
@@ -29,14 +30,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6049d2d7",
+   "id": "bbb1c0e0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "21aa599b",
+   "id": "1315b552",
    "metadata": {
     "tags": []
    },
@@ -49,14 +50,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1d2c08",
+   "id": "fa8e9069",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "320722b6",
+   "id": "fc69b2be",
    "metadata": {},
    "source": [
     "### 2. The if Statement\n",
@@ -66,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0dbe14d6",
+   "id": "25d231b5",
    "metadata": {},
    "outputs": [
     {
@@ -86,14 +87,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2b46d3",
+   "id": "e34684b0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b3cfbec8",
+   "id": "380f7a75",
    "metadata": {
     "tags": []
    },
@@ -106,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eb8f0469",
+   "id": "603bf85f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +121,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3115789",
+   "id": "a8b8b13b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9e596083",
+   "id": "fcc50e59",
    "metadata": {},
    "source": [
     "### 4. The else Statement\n",
@@ -137,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "796579af",
+   "id": "2e0585fe",
    "metadata": {},
    "outputs": [
     {
@@ -161,14 +162,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1472060",
+   "id": "d8c09cc5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7fd0fab9",
+   "id": "10e97d08",
    "metadata": {},
    "source": [
     "### 5. Nested if Statements\n",
@@ -178,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b5389b66",
+   "id": "a4be0dd4",
    "metadata": {},
    "outputs": [
     {
@@ -201,14 +202,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f137a74",
+   "id": "1b9d6cef",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bd90d490",
+   "id": "49653c6a",
    "metadata": {},
    "source": [
     "### 6. Multiple Conditions: The and Operator\n",
@@ -218,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "21b8d43d",
+   "id": "46a8dc5c",
    "metadata": {},
    "outputs": [
     {
@@ -239,14 +240,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cfa64a9",
+   "id": "49dd3cf0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ea19a4df",
+   "id": "96795aa9",
    "metadata": {},
    "source": [
     "### 7. Multiple Conditions: The or Operator\n",
@@ -256,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "857df091",
+   "id": "c3a3e073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,14 +270,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d26d956",
+   "id": "a646db83",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5521ceb8",
+   "id": "26e8e1be",
    "metadata": {},
    "source": [
     "### 8. The not Operator\n",
@@ -286,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "882aecf9",
+   "id": "ea665c41",
    "metadata": {},
    "outputs": [
     {
@@ -306,14 +307,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35bbbfc2",
+   "id": "db5e1cf9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ad93d141",
+   "id": "2930cf14",
    "metadata": {},
    "source": [
     "### 9. Ternary Operator\n",
@@ -324,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d8e03c7c",
+   "id": "1c4990b3",
    "metadata": {},
    "outputs": [
     {
@@ -344,14 +345,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6feb081",
+   "id": "f811d3d1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d64d0804",
+   "id": "c1bfac01",
    "metadata": {},
    "source": [
     "### 10. The pass Statement\n",
@@ -361,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2f6a0da9",
+   "id": "84f17209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,14 +374,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0980b3b2",
+   "id": "e9e9a253",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2b948bcd",
+   "id": "a7fbaa04",
    "metadata": {},
    "source": [
     "### 11. Membership Operators: in and not in\n",
@@ -390,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c54fd38b",
+   "id": "ff4a3d84",
    "metadata": {},
    "outputs": [
     {
@@ -414,14 +415,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9fbc562",
+   "id": "433e70f6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6e469860",
+   "id": "d3685629",
    "metadata": {},
    "source": [
     "### 12. Identity Operators: is and is not\n",
@@ -431,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53b98e26",
+   "id": "af1d3684",
    "metadata": {},
    "outputs": [
     {
@@ -458,14 +459,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e754861b",
+   "id": "e62e557f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8536ab32",
+   "id": "524c4060",
    "metadata": {},
    "source": [
     "### 13. Conditional Expressions in List Comprehensions\n",
@@ -475,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ffcfc63d",
+   "id": "f9ce95d0",
    "metadata": {},
    "outputs": [
     {
@@ -495,14 +496,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f6865e",
+   "id": "7bbea067",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "02c68c25",
+   "id": "b47789e8",
    "metadata": {},
    "source": [
     "### 14. Real-World Example: A Simple Calculator\n",
@@ -512,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "094755bc",
+   "id": "c29ad23e",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35814878",
+   "id": "9ed4b7e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -566,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "273dae6b",
+   "id": "a9cb0281",
    "metadata": {},
    "outputs": [],
    "source": []
