--- a/week5/Week5.3.ipynb
+++ b/week5/Week5.3.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "51eefa88",
    "metadata": {},
    "source": [
-    "## Objective: To learn and understand the usage of try-except blocks and 10 common exceptions in Python.<br>\n",
-    "\n",
+    "## Objective: To learn and understand the usage of try-except blocks and 10 common exceptions in Python.\n",
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week5/Week5.3.ipynb\n",
     "### Outline:\n",
     "#### ① ImportError\n",
     "#### ② IndexError\n",
@@ -24,12 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c0a06bfd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "6acdb64b",
    "metadata": {
     "tags": []
    },
@@ -40,7 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "2f3f57f9",
    "metadata": {},
    "outputs": [
     {
@@ -61,12 +65,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5b05d257",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "fa551607",
    "metadata": {},
    "source": [
     "### 2. IndexError\n",
@@ -76,6 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ae78ef7d",
    "metadata": {},
    "outputs": [
     {
@@ -97,12 +104,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "69d8568a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "3eda9635",
    "metadata": {},
    "source": [
     "### 3. KeyError\n",
@@ -112,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "d442bc25",
    "metadata": {},
    "outputs": [
     {
@@ -133,12 +143,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b25f1aa9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "36953ba4",
    "metadata": {},
    "source": [
     "### 4. NameError\n",
@@ -148,6 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "13c17856",
    "metadata": {},
    "outputs": [
     {
@@ -168,12 +181,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7a6c914d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "b8b0688a",
    "metadata": {},
    "source": [
     "### 5. FileNotFoundError\n",
@@ -181,8 +196,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8bfff016-0f89-4690-8780-de842a42245f",
+   "metadata": {},
+   "source": [
+    "#### Create a file for the experiment."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "id": "f287da8d-8654-47f3-a273-49644ce180e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('existent_file.txt', 'w') as file:\n",
+    "    file.write(\"I am with you\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d3d4558d-d381-440d-a0e7-812ea21d2213",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am with you\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"existent_file.txt\", \"r\") as file:\n",
+    "    print(file.readline())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d53f34d8",
    "metadata": {},
    "outputs": [
     {
@@ -204,12 +258,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dc0f7a06",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "820cbfbc",
    "metadata": {},
    "source": [
     "### 6. TypeError\n",
@@ -218,7 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "id": "32dc57f1",
    "metadata": {},
    "outputs": [
     {
@@ -239,12 +296,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f716f2ed",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "353723eb",
    "metadata": {},
    "source": [
     "### 7. ValueError\n",
@@ -254,6 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "d5b07853",
    "metadata": {},
    "outputs": [
     {
@@ -274,12 +334,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03a1c120",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "f01f4a9c",
    "metadata": {},
    "source": [
     "### 8. ZeroDivisionError\n",
@@ -289,6 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "b87dfc8d",
    "metadata": {},
    "outputs": [
     {
@@ -309,12 +372,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2216ffa3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "7d9fe3bc",
    "metadata": {},
    "source": [
     "### 9. AttributeError\n",
@@ -323,7 +388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
+   "id": "ae39effb",
    "metadata": {},
    "outputs": [
     {
@@ -349,12 +415,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "009e0f75",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "e524af2e",
    "metadata": {},
    "source": [
     "### 10. SyntaxError\n",
@@ -363,7 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
+   "id": "2454181f",
    "metadata": {},
    "outputs": [
     {
@@ -384,12 +453,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5f5c2a57",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "0d1ca0a5",
    "metadata": {},
    "source": [
     "### 11. Without sepcific error type\n",
@@ -398,7 +469,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
+   "id": "9b85a075",
    "metadata": {},
    "outputs": [
     {
@@ -420,12 +492,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4081bb95",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "14742600",
    "metadata": {},
    "source": [
     "### 12. Real-World Example\n",
@@ -437,21 +511,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "id": "aff999c1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter an integer:  ;df\n"
+      "Enter an integer:  512\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An exception occurred: input is not a valid integer\n",
+      "Squared value: 262144\n",
       "Execution completed\n"
      ]
     }
@@ -473,6 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1033ba10",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -480,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
