--- a/week5/Week5.2.ipynb
+++ b/week5/Week5.2.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b1253ea4",
    "metadata": {},
    "source": [
-    "## Objective: Learn and understand advanced conditional statements and error handling in Python <br>\n",
-    "\n",
+    "## Objective: Learn and understand advanced conditional statements and error handling in Python\n",
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week5/Week5.2.ipynb\n",
     "### Outline:\n",
     "#### ① Short-circuit evaluation\n",
     "#### ② Try-Except blocks for error handling\n",
@@ -17,12 +18,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "15b77469",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "8bc744a5",
    "metadata": {
     "tags": []
    },
@@ -33,7 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "id": "5d342639",
    "metadata": {},
    "outputs": [
     {
@@ -56,12 +60,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f31a46e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "bc6badd1",
    "metadata": {},
    "source": [
     "### 2. Try-Except blocks for error handling\n",
@@ -70,7 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "a46519de",
    "metadata": {},
    "outputs": [
     {
@@ -91,12 +98,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "77125366",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "e5499ac1",
    "metadata": {},
    "source": [
     "### 3. Else and Finally clauses\n",
@@ -105,7 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "id": "f3788edb",
    "metadata": {},
    "outputs": [
     {
@@ -131,12 +141,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d5b3041c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "28c27e41",
    "metadata": {},
    "source": [
     "### 4. Handling multiple exceptions\n",
@@ -150,7 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "id": "d59613db",
    "metadata": {},
    "outputs": [
     {
@@ -171,12 +184,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d23bdc6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "cd3198e9",
    "metadata": {},
    "source": [
     "### 5. Assert statements\n",
@@ -186,7 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
+   "id": "0e43297d",
    "metadata": {},
    "outputs": [
     {
@@ -203,33 +219,11 @@
     "\n",
     "print('Passed')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AssertionError: x be negative\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 5\n",
-    "\n",
-    "try:\n",
-    "    assert x < 0, \"x must be negative\"\n",
-    "except AssertionError as e:\n",
-    "    print(f\"AssertionError: {e}\")"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -243,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
