--- a/week5/Week5.Assignment.ipynb
+++ b/week5/Week5.Assignment.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "### Goal: write to code for Rock-Paper-Scissors game that takes user input and plays against the computer, handling invalid input using an exception:\n",
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week5/Week5.Assignment.ipynb\n",
     "#### Tips\n",
     "#### 1. Use the random.choice() function to generate the computer's choice from a list of valid options.\n",
     "#### 2. Convert user input to lowercase and check if it's valid using a list of acceptable choices; raise a ValueError for invalid input.\n",
@@ -55,7 +56,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -69,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
