--- a/week5/Week5.Exercise2.ipynb
+++ b/week5/Week5.Exercise2.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d40fce9f-b7b6-4d64-90f0-a1852d8cdda2",
+   "metadata": {},
+   "source": [
+    "#### https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week5/Week5.Exercise2.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3578e08",
    "metadata": {},
    "source": [
     "#### 1. Handle a division by zero exception. 'ZeroDivisionError'"
@@ -10,6 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2771376b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +30,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "22d6c29a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "96e999ae",
    "metadata": {},
    "source": [
     "#### 2. Handle an exception when trying to access a non-existent key in a dictionary. 'KeyError'"
@@ -34,6 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "5106fae4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +57,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6ac0fe1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "c4d51be0",
    "metadata": {},
    "source": [
     "#### 3. Handle an exception when trying to convert a non-numeric string to an integer. 'ValueError'"
@@ -58,6 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "ebbdd393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +83,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da21b6fa",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "fcc37f7b",
    "metadata": {},
    "source": [
     "#### 4. Handle an exception when trying to access an out-of-range index in a list. 'IndexError'"
@@ -81,6 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "73f5f390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +110,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1546eb0a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "a31a0287",
    "metadata": {},
    "source": [
     "#### 5. Handle an exception when trying to open a non-existent file. 'FileNotFoundError'"
@@ -105,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "9851b6b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,12 +136,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03e8faff",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "7100da80",
    "metadata": {},
    "source": [
     "#### 6. Handle a TypeError when trying to concatenate a string and an integer. 'TypeError'"
@@ -128,6 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "35c9d1f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,12 +163,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "09aca3cf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "28c90296",
    "metadata": {},
    "source": [
     "#### 7. Handle an exception when trying to import a non-existent module. 'ImportError'"
@@ -152,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "6edcaeb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,12 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2f07eb4d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "31272b71",
    "metadata": {},
    "source": [
     "#### 8. Handle an exception when trying to call an undefined function. 'NameError'"
@@ -175,6 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "066a9e7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,12 +215,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b2d3b053",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "e3d3d897",
    "metadata": {},
    "source": [
     "#### 9. Handle multiple exceptions when trying to convert user input to an integer and divide by it. 'ValueError' , 'ZeroDivisionError'"
@@ -198,6 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "a6502ab8",
    "metadata": {},
    "outputs": [
     {
@@ -216,6 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f4ab442",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -223,7 +258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -237,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
