--- a/week6/Week6.Assignment.ipynb
+++ b/week6/Week6.Assignment.ipynb
@@ -7,7 +7,9 @@
     "### Question: Create a simple \"Guess the Number\" game using either a for loop or a while loop. \n",
     "#### The game should generate a random number between 1 and 100 and ask the user to guess the number. \n",
     "#### The user has a maximum of 7 attempts to guess the correct number. If the user guesses correctly, display a success message. \n",
-    "#### If the user fails to guess the number within the allotted attempts, display a failure message along with the correct number."
+    "#### If the user fails to guess the number within the allotted attempts, display a failure message along with the correct number.\n",
+    "\n",
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week6/Week6.Assignment.ipynb"
    ]
   },
   {
