--- a/week6/Week6.Exercise1.ipynb
+++ b/week6/Week6.Exercise1.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### \"Solve the problem using a for loop.\n",
     "#### https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week6/Week6.Exercise1.ipynb"
    ]
   },
