--- a/week7/Week7.1.ipynb
+++ b/week7/Week7.1.ipynb
@@ -436,8 +436,8 @@
     }
    ],
    "source": [
-    "add = lambda x, y: x + y\n",
-    "print(add(3, 5))"
+    "add = (lambda x, y: x + y)(3,5)\n",
+    "add"
    ]
   },
   {
