--- a/week7/Week7.1.ipynb
+++ b/week7/Week7.1.ipynb
@@ -529,8 +529,7 @@
    "metadata": {},
    "source": [
     "### 12. Global and Nonlocal Keywords\n",
-    "#### The global keyword allows you to modify a global variable from within a function. \n",
-    "#### The nonlocal keyword is used to indicate that a variable inside a nested function belongs to the enclosing function."
+    "#### The global keyword allows you to modify a global variable from within a function. "
    ]
   },
   {
