--- a/week7/Week7.2.ipynb
+++ b/week7/Week7.2.ipynb
@@ -237,83 +237,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Inheritance\n",
-    "#### Inheritance allows you to create a new class that inherits the attributes and methods of an existing class:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ParentClass:\n",
-    "    pass\n",
-    "\n",
-    "class ChildClass(ParentClass):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 9. Method Overriding\n",
-    "#### Inheritance allows you to override a parent class's methods in a child class <br>\n",
-    "#### Method overriding: a feature that allows a subclass to provide a new implementation of a method that is already defined in its parent class or superclass. \n",
-    "#### This new implementation in the subclass \"overrides\" the original implementation in the parent class."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ParentClass:\n",
-    "    def my_method(self):\n",
-    "        print(\"Parent method\")\n",
-    "\n",
-    "class ChildClass(ParentClass):\n",
-    "    def my_method(self):\n",
-    "        print(\"Child method\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 10. Example: A Simple Bank Account Class\n",
+    "### 8. Example: A Simple Bank Account Class\n",
     "#### Here's a simple example of a class representing a bank account:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "125\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BankAccount:\n",
     "    def __init__(self, balance=0):\n",
@@ -348,14 +280,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 11. Method Overriding with a detail example\n",
+    "### 9. Inheritance\n",
+    "#### Inheritance allows you to create a new class that inherits the attributes and methods of an existing class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max says Woof!\n",
+      "Molly says Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a base class\n",
+    "class Animal:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        pass\n",
+    "\n",
+    "# Define a subclass that inherits from Animal\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says Woof!\"\n",
+    "\n",
+    "# Define another subclass that inherits from Animal\n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says Meow!\"\n",
+    "\n",
+    "# Creating instances of Dog and Cat\n",
+    "dog = Dog('Max')\n",
+    "cat = Cat('Molly')\n",
+    "\n",
+    "# Invoking the speak method which is defined in the respective classes\n",
+    "print(dog.speak())\n",
+    "print(cat.speak())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10. Method Overriding\n",
+    "#### Inheritance allows you to override a parent class's methods in a child class <br>\n",
+    "#### Method overriding: a feature that allows a subclass to provide a new implementation of a method that is already defined in its parent class or superclass. \n",
+    "#### This new implementation in the subclass \"overrides\" the original implementation in the parent class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He makes a noise\n",
+      "Max says Woof!\n",
+      "Molly says Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a base class\n",
+    "class Animal:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} makes a noise\"\n",
+    "\n",
+    "# Define a subclass that inherits from Animal\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says Woof!\"\n",
+    "\n",
+    "# Define another subclass that inherits from Animal\n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says Meow!\"\n",
+    "\n",
+    "# Creating instances of Animal, Dog and Cat\n",
+    "generic_animal = Animal('He')\n",
+    "dog = Dog('Max')\n",
+    "cat = Cat('Molly')\n",
+    "\n",
+    "# Invoking the speak method which is defined in the respective classes\n",
+    "print(generic_animal.speak())\n",
+    "print(dog.speak())\n",
+    "print(cat.speak())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11. Method Overriding with a more detail example\n",
     "#### Consider a Vehicle class with a maximum_range method that calculates the maximum range based on fuel efficiency and fuel capacity. \n",
     "#### We will create two derived classes, Car and Motorcycle, which will override the maximum_range method to compute the range considering their own fuel efficiency and fuel capacity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -443,11 +494,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### An example illustrating the difference with and without super():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, I'm a method of Parent class.\n",
+      "Hello, I'm a method of ChildWithoutSuper class.\n",
+      "Hello, I'm a method of Parent class. And hello, I'm a method of ChildWithSuper class.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Parent:\n",
+    "    def greet(self):\n",
+    "        return \"Hello, I'm a method of Parent class.\"\n",
+    "\n",
+    "class ChildWithoutSuper(Parent):\n",
+    "    def greet(self):\n",
+    "        return \"Hello, I'm a method of ChildWithoutSuper class.\"\n",
+    "\n",
+    "class ChildWithSuper(Parent):\n",
+    "    def greet(self):\n",
+    "        return super().greet() + \" And hello, I'm a method of ChildWithSuper class.\"\n",
+    "\n",
+    "parent = Parent()\n",
+    "child_without_super = ChildWithoutSuper()\n",
+    "child_with_super = ChildWithSuper()\n",
+    "\n",
+    "print(parent.greet())  # Output: Hello, I'm a method of Parent class.\n",
+    "print(child_without_super.greet())  # Output: Hello, I'm a method of ChildWithoutSuper class.\n",
+    "print(child_with_super.greet())  # Output: Hello, I'm a method of Parent class. And hello, I'm a method of ChildWithSuper class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ChildWithoutSuper completely replaces the greet method from Parent. \n",
+    "#### ChildWithSuper extends the greet method from Parent by calling super().greet() to get the Parent class's message and then adding its own message to it."
+   ]
   }
  ],
  "metadata": {
