--- a/week7/Week7.Exercise1.ipynb
+++ b/week7/Week7.Exercise1.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4828f0b0",
    "metadata": {},
    "source": [
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week7/Week7.Exercise1.ipynb\n",
+    "\n",
     "### 1. Write a Python function that calculates the total price of items in a shopping cart, including a specified sales tax percentage.\n",
     "#### Tip: Hint: Initialize a total variable, iterate through the list of items, add the price of each item to the total, and then apply the tax percentage. \n",
     "#### Finally, round the result before returning."
@@ -13,7 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8f354730",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b540e808",
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +51,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92f081fe-990d-4267-85de-f776f9ff05de",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b23a1e0b",
    "metadata": {},
    "source": [
     "### 2. Write a Python function that calculates the average temperature for a given list of daily temperatures and returns the result in Fahrenheit or Celsius based on user input.\n",
@@ -69,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "10da66bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +80,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "37b105d3",
    "metadata": {},
    "outputs": [
     {
@@ -106,14 +101,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5003b6a8-65b5-44bf-be80-ebf5b06a0b72",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bda9e36b",
    "metadata": {},
    "source": [
     "### 3. Write a Python function that finds the longest word in a given string.\n",
@@ -124,7 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bac881a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +131,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a82a6004",
    "metadata": {},
    "outputs": [
     {
@@ -160,14 +151,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "588e39c7-285b-49a4-9336-eb9420b36d85",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f20a22dd",
    "metadata": {},
    "source": [
     "### 4. Problem: Write a Python function that takes a list of numbers as input and returns the sum of all even numbers in the list.\n",
@@ -177,7 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11cf99e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "02e12d10-523a-4f2f-b3c2-055c40473810",
    "metadata": {},
    "outputs": [
     {
@@ -212,14 +199,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b71d3cd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a489346b",
    "metadata": {},
    "source": [
     "### 5. Write a Python function that takes a list of strings and returns a dictionary with the frequency of each unique string.\n",
@@ -230,7 +215,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "229e319f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +230,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "45e1714e",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
