--- a/week7/Week7.Exercise2.ipynb
+++ b/week7/Week7.Exercise2.ipynb
@@ -1,18 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5842be37-0c86-4df0-8259-f172eec42617",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "b23a1e0b",
    "metadata": {},
    "source": [
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week7/Week7.Exercise2.ipynb\n",
     "### 1. Create a Python class Person that represents a person with a name, age, and address. \n",
     "### The class should have methods to update the person's age and address.\n",
     "#### Tip: Store the person's name, age, and address as instance attributes, and update them in the corresponding methods."
@@ -21,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10da66bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5003b6a8-65b5-44bf-be80-ebf5b06a0b72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +48,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a617980-f064-4e4c-9c76-42f26825d3c2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bda9e36b",
    "metadata": {
     "tags": []
    },
@@ -79,7 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bac881a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb9ac70-d478-4063-b981-504581924e9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
