--- a/week7/Week7.Exercise2.ipynb
+++ b/week7/Week7.Exercise2.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "class Person:\n",
     "    def __init__(self, name, age, address):\n",
+    "        self.name = name\n",
     "        # Your code here\n",
     "\n",
     "    def update_age(self, new_age):\n",
@@ -72,6 +73,7 @@
    "source": [
     "class Student(Person):\n",
     "    def __init__(self, name, age, address):\n",
+    "        super().__init__(name, age, address)\n",
     "        # Your code here\n",
     "\n",
     "    def add_grade(self, subject, grade):\n",
