--- a/week7/Week7.2.ipynb
+++ b/week7/Week7.2.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8e48440a",
    "metadata": {},
    "source": [
     "## Objective: Learn how to create and use classes and objects in Python <br>\n",
@@ -23,12 +24,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a8adc6fd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "9d003ed8",
    "metadata": {
     "tags": []
    },
@@ -40,14 +43,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4801be3-9a4f-4946-a64d-4b817331084d",
+   "metadata": {},
+   "source": [
+    "### Classes vs Instances\n",
+    "#### A class is a blueprint for how something should be defined. It doesn’t actually contain any data. \n",
+    "#### While the class is the blueprint, an instance is an object that is built from a class and contains real data. \n",
+    "#### A class is like a form or questionnaire. An instance is like a form that has been filled out with information.\n",
+    "<img src=\"https://raw.githubusercontent.com/JunetaeKim/PythonClass/main/week7/ClassVsInstance.png\" width=\"600\" height=\"300\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "755288cb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "337dd25f",
    "metadata": {},
    "source": [
     "### 2. Basic for a Class"
@@ -55,21 +72,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b693d749",
    "metadata": {},
    "source": [
     "#### https://pynative.com/python-class-method/\n",
-    "![Forloop.png](https://raw.githubusercontent.com/JunetaeKim/PythonClass/main/week7/SyntaxClass.PNG)"
+    "![Class.png](https://raw.githubusercontent.com/JunetaeKim/PythonClass/main/week7/SyntaxClass.PNG)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3ffb528f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "2ae39dcd",
    "metadata": {
     "tags": []
    },
@@ -81,6 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "f46fbcdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +112,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "516a4def",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "9db1cfa3",
    "metadata": {},
    "source": [
     "### 4. Defining Methods\n",
@@ -107,6 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "bc520354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,12 +142,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bd9af554",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "7e3c8c1e",
    "metadata": {},
    "source": [
     "### 4. Creating Objects\n",
@@ -133,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "1e273b00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,12 +169,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e887910",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "5e9cb9cc",
    "metadata": {},
    "source": [
     "### 5. Accessing Attributes and Methods\n",
@@ -157,6 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "102fc419",
    "metadata": {},
    "outputs": [
     {
@@ -174,12 +204,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43b0a34f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "86bc8883",
    "metadata": {},
    "source": [
     "### 6. The __init__ Method\n",
@@ -190,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "75df578a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,12 +234,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc5a2d20",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "f514609b",
    "metadata": {},
    "source": [
     "### 7. Class and Instance Variables\n",
@@ -216,6 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "5da869cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,12 +265,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6ecaf067",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "1761888f",
    "metadata": {},
    "source": [
     "### 8. Example: A Simple Bank Account Class\n",
@@ -244,6 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dfe60463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,12 +311,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0358c809",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "b5f47f44",
    "metadata": {},
    "source": [
     "### 9. Inheritance\n",
@@ -287,6 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ef46470f",
    "metadata": {},
    "outputs": [
     {
@@ -329,12 +371,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "586be596",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "e477a003",
    "metadata": {},
    "source": [
     "### 10. Method Overriding\n",
@@ -346,6 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "ea52bf16",
    "metadata": {},
    "outputs": [
     {
@@ -391,12 +436,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e493875",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "c652df4c",
    "metadata": {},
    "source": [
     "### 11. Method Overriding with a more detail example\n",
@@ -407,6 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "bfe363b5",
    "metadata": {},
    "outputs": [
     {
@@ -466,6 +514,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1c47045",
    "metadata": {},
    "source": [
     "#### In this example, the Vehicle class defines the maximum_range method, which calculates the range based on fuel efficiency and fuel capacity. \n",
@@ -475,12 +524,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33a909d9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "b0d9205b",
    "metadata": {},
    "source": [
     "### 11.1. super()\n",
@@ -495,6 +546,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bebaf75",
    "metadata": {},
    "source": [
     "#### An example illustrating the difference with and without super():"
@@ -503,6 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "106cb1b9",
    "metadata": {},
    "outputs": [
     {
@@ -539,6 +592,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58911afd",
    "metadata": {},
    "source": [
     "#### ChildWithoutSuper completely replaces the greet method from Parent. \n",
@@ -548,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -562,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
