--- a/week7/Week7.2.ipynb
+++ b/week7/Week7.2.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "ef46470f",
    "metadata": {},
    "outputs": [
@@ -333,8 +333,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max says Woof!\n",
-      "Molly says Meow!\n"
+      "Max says something\n",
+      "Molly says something\n"
      ]
     }
    ],
@@ -345,17 +345,15 @@
     "        self.name = name\n",
     "\n",
     "    def speak(self):\n",
-    "        pass\n",
+    "        return f\"{self.name} says something\"\n",
     "\n",
     "# Define a subclass that inherits from Animal\n",
     "class Dog(Animal):\n",
-    "    def speak(self):\n",
-    "        return f\"{self.name} says Woof!\"\n",
+    "    pass\n",
     "\n",
     "# Define another subclass that inherits from Animal\n",
     "class Cat(Animal):\n",
-    "    def speak(self):\n",
-    "        return f\"{self.name} says Meow!\"\n",
+    "    pass\n",
     "\n",
     "# Creating instances of Dog and Cat\n",
     "dog = Dog('Max')\n",
@@ -368,8 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "586be596",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08c408a2-e32e-4cba-b3fa-364402784d88",
    "metadata": {},
    "outputs": [],
    "source": []
