--- a/week4/Week4.4.ipynb
+++ b/week4/Week4.4.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "## Objective: Objective: Understand the differences between Python's list, set, dictionary, and tuple data structures, and when to use each <br>\n",
+    "## Objective: Understand the differences between Python's list, set, dictionary, and tuple data structures, and when to use each <br>\n",
     "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week4/Week4.4.ipynb\n",
     "### Outline:\n",
     "\n",
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
