--- a/week4/Week4.4.ipynb
+++ b/week4/Week4.4.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "### 3. Sets\n",
     "#### Sets are unordered collections of unique elements.\n",
-    "#### Elements in a set can be modified (mutable).\n",
+    "#### Elements in a set cannot be modified (mutable).\n",
     "#### Sets do not allow duplicate elements.\n",
     "#### Sets are created using curly braces {} or the set() constructor."
    ]
