--- a/week5/Week5.1.ipynb
+++ b/week5/Week5.1.ipynb
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "c29ad23e",
    "metadata": {},
    "outputs": [
@@ -520,16 +520,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the first number:  1\n",
-      "Enter the second number:  5\n",
-      "Enter the operation (+, -, *, /):  +\n"
+      "Enter the first number:  4\n",
+      "Enter the second number:  0\n",
+      "Enter the operation (+, -, *, /):  /\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The result is 6.0\n"
+      "Error: Division by zero\n"
      ]
     }
    ],
@@ -552,7 +552,7 @@
     "else:\n",
     "    print(\"Invalid operation\")\n",
     "\n",
-    "if operation in [\"+\", \"-\", \"*\", \"/\"] and (operation != \"/\" or num2 != 0):\n",
+    "if operation in [\"+\", \"-\", \"*\", \"/\"] and ( num2 != 0):\n",
     "    print(f\"The result is {result}\")"
    ]
   },
@@ -589,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
