--- a/week5/Week5.2.ipynb
+++ b/week5/Week5.2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "5d342639",
    "metadata": {},
    "outputs": [
@@ -44,23 +44,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Short-circuit evaluation prevented a division by zero error\n"
+      "False\n"
      ]
     }
    ],
    "source": [
-    "x = 5\n",
-    "y = 0\n",
-    "if x != 0 and y != 0:\n",
-    "    print(\"Both conditions are true\")\n",
-    "else:\n",
-    "    print(\"Short-circuit evaluation prevented a division by zero error\")"
+    "# and operator\n",
+    "x = False\n",
+    "y = True  # ZeroDivisionError occurs\n",
+    "\n",
+    "# Thanks to short-circuit evaluation, y is not evaluated\n",
+    "result = x and y  # result is False\n",
+    "print(result)  # Output: False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1f31a46e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# or operator\n",
+    "x = True\n",
+    "y = False\n",
+    "\n",
+    "# Thanks to short-circuit evaluation, y is not evaluated\n",
+    "result = x or y  # result is True\n",
+    "print(result)  # Output: True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f31a46e",
+   "id": "dae410ca-eee4-49f9-96dc-abe4e043eae9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -68,7 +93,9 @@
   {
    "cell_type": "markdown",
    "id": "bc6badd1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 2. Try-Except blocks for error handling\n",
     "#### You can use try-except blocks to catch and handle exceptions that may occur during the execution of your program."
@@ -237,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
