--- a/week7/Week7.2.ipynb
+++ b/week7/Week7.2.ipynb
@@ -451,7 +451,7 @@
    "metadata": {},
    "source": [
     "### 11. Method Overriding with a more detail example\n",
-    "#### Consider a Vehicle class with a maximum_range method that calculates the maximum range based on fuel efficiency and fuel capacity. \n",
+    "#### Consider a Vehicle class with a maximum_range method that calculates the maximum range (i.e., distance) based on fuel efficiency and fuel capacity. \n",
     "#### We will create two derived classes, Car and Motorcycle, which will override the maximum_range method to compute the range considering their own fuel efficiency and fuel capacity."
    ]
   },
@@ -620,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
