--- a/week6/Week6.Assignment.ipynb
+++ b/week6/Week6.Assignment.ipynb
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python code solution using a for loop:"
+    "### Python code solution using a while loop:"
    ]
   },
   {
@@ -277,7 +277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -291,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
